# Pokemon-Shiritori

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
data/: gen1_en.json  gens_1_6_en.json
scripts/: fetch_gen1_json.sh
src/: agents.rs  analysis.rs  gen1.rs  gens.rs  graph.rs  lib.rs  main.rs  normalize.rs  play.rs  solver.rs  terminal_stats.rs  tournament.rs  wasm.rs
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  gen1data.ts  primary_types_1_721.json  styles.css  types.ts
web/src/components/: GameScreen.tsx  PokedexPanel.tsx  RecordsPanel.tsx  RulesModal.tsx  SetupScreen.tsx  SlidePanel.tsx  VictoryScreen.tsx
web/src/wasm-pkg/: pokemon_shiritori.d.ts  pokemon_shiritori.js  pokemon_shiritori_bg.wasm  pokemon_shiritori_bg.wasm.d.ts
