[package]
name = "pokemon_shiritori"
version = "0.1.0"
edition = "2021"
description = "Optimal Gen 1 Pokémon Shiritori (English letters)"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-hash = "2.0"
rand = "0.9"

[[bin]]
name = "pokemon-shiritori"
path = "src/main.rs"

[lib]
name = "pokemon_shiritori"
path = "src/lib.rs"
