[package]
name = "pokemon_shiritori"
version = "0.1.0"
edition = "2021"
description = "Pokémon Shiritori — generations 1–6 English names (letter multigraph)"
license = "MIT OR Apache-2.0"

[lib]
name = "pokemon_shiritori"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustc-hash = "2.0"
rand = "0.9"
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
js-sys = { version = "0.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "js-sys"]

[[bin]]
name = "pokemon-shiritori"
path = "src/main.rs"
